Finalização da responsividade da Dashboard com Banco de Dados

--- a/Site/public/style.css
+++ b/Site/public/style.css
@@ -376,6 +376,7 @@ main.menuHistoria h1 {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    font-size: 1.5rem;
     
 }
 
